--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,18 @@ notifications:
     on_success: never
     on_failure: change
 
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
+
 node_js:
   - "stable"
+
+env:
+  - CC=gcc-4.8 CXX=g++-4.8
 
 script:
   - npm run lint+build+test
